# filter-rs

./: Cargo.toml
src/: common.rs  discrete_bayes.rs  gh.rs  stats.rs
src/kalman/: kalman_filter.rs
